# SpotifyWebApiAdapter

./: .clang-format  .cmake-format.yaml  .gitignore  .travis.yml  CMakeLists.txt  Dockerfile  README.md  appveyor.yml
.github/workflows/: build_cmake.yml
cmake/: CompilerWarnings.cmake  Conan.cmake  Doxygen.cmake  ExtraOptions.cmake  Sanitizers.cmake  StandardProjectSettings.cmake  StaticAnalyzers.cmake
fuzz_test/: CMakeLists.txt  fuzz_tester.cpp
src/: Album.cpp  Album.hpp  Artist.cpp  Artist.hpp  Authentication.cpp  Authentication.hpp  AuthenticationToken.cpp  AuthenticationToken.hpp  Authentification.cpp  Authentification.hpp  AuthentificationToken.cpp  AuthentificationToken.h  AuthentificationToken.hpp  BaseModel.cpp  BaseModel.h  Browse.cpp  Browse.hpp  CMakeLists.txt  Followers.cpp  Followers.hpp  Image.cpp  Image.hpp  Page.cpp  Page.hpp  Playlist.cpp  Playlist.hpp  PlaylistTrack.cpp  PlaylistTrack.hpp  SpotifyNetworkManager.cpp  SpotifyNetworkManager.h  SpotifyNetworkManager.hpp  SpotifyWebApi.cpp  SpotifyWebApi.h  SpotifyWebApiAdapter.cpp  SpotifyWebApiAdapter.h  SpotifyWebApiAdapter.hpp  Track.cpp  Track.hpp  User.cpp  User.hpp
src/SpotifyModel/: accesstoken.cpp  accesstoken.h
src/detail/: Authentification.cpp  Authentification.hpp  AuthentificationToken.cpp  AuthentificationToken.hpp  BaseModel.cpp  BaseModel.hpp  Core.hpp  HttpHelper.cpp  HttpHelper.hpp  Log.cpp  Log.hpp  SpotifyNetworkManager.cpp  SpotifyNetworkManager.hpp
src/model/: accesstoken.cpp  accesstoken.hpp  artist.cpp  artist.hpp  followers.cpp  followers.hpp  image.cpp  image.hpp  modeldata.cpp  modeldata.hpp  page.cpp  page.hpp  playlist.cpp  playlist.hpp  playlistdata.cpp  playlistdata.hpp  playlisttrack.cpp  playlisttrack.hpp  savedtrack.cpp  savedtrack.hpp  track_album.cpp  track_album.hpp  user.cpp  user.hpp
test/: CMakeLists.txt  constexpr_tests.cpp  tests.cpp
